--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ endif ()
 
 include_directories("include" ${GLEW_INCLUDE_DIRS} ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS})
 
-set(SOURCE_FILES src/main.cpp src/GLSLProgram.cpp)
+set(SOURCE_FILES src/main.cpp)
 set(INCLUDE_FILES include/GLSLProgram.h)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${INCLUDE_FILES})
