--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.6)
 project(Cg_Anw)
 
 set(CMAKE_CXX_STANDARD 14)
-#set(CMAKE_VERBOSE_MAKEFILE TRUE)
+set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
 if (UNIX AND NOT CYGWIN)
     find_package(PkgConfig REQUIRED)
@@ -10,7 +10,8 @@ if (UNIX AND NOT CYGWIN)
     find_package(OpenGL REQUIRED)
     find_package(GLEW REQUIRED)
 elseif (WIN32)
-    add_definitions(-DGLEW_STATIC)
+    add_definitions(-D GLEW_STATIC)
+    add_definitions(-D FREEGLUT_STATIC)
     find_package(OPENGL REQUIRED)
 
     set(GLFW_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/libs/glfw-3.1.2.bin.WIN64/include)
@@ -20,7 +21,7 @@ elseif (WIN32)
 
     set(GLFW_STATIC_LIBRARIES ${PROJECT_SOURCE_DIR}/libs/glfw-3.1.2.bin.WIN64/lib-mingw-w64/libglfw3.a)
     set(GLEW_LIBRARIES ${PROJECT_SOURCE_DIR}/libs/glew-2.1.0/lib/libglew32.a)
-    set(FREEGLUT_LIBRARIES ${PROJECT_SOURCE_DIR}/libs/freeglut-3.0.0-mingw/lib/libfreeglut.dll.a)
+    set(FREEGLUT_LIBRARIES ${PROJECT_SOURCE_DIR}/libs/freeglut-3.0.0-mingw/lib/libfreeglut_static.a winmm gdi32)
 
 else ()
     message("UNSUPPORTED OS")
