running on Ubuntu :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,9 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
 
 if (UNIX AND NOT CYGWIN)
-    find_package(PkgConfig REQUIRED)
-    pkg_search_module(GLFW REQUIRED glfw3)
     find_package(OpenGL REQUIRED)
     find_package(GLEW REQUIRED)
+    find_package(GLUT REQUIRED)
 elseif (WIN32)
     add_definitions(-D GLEW_STATIC)
     add_definitions(-D FREEGLUT_STATIC)
@@ -17,24 +16,24 @@ elseif (WIN32)
     set(GLFW_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/libs/glfw-3.1.2.bin.WIN64/include)
     set(GLEW_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/libs/glew-2.1.0/include)
     set(GLM_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/libs/glm-0.9.7.2)
-    set(FREEGLUT_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/libs/freeglut-3.0.0-mingw/include)
+    set(GLUT_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/libs/freeglut-3.0.0-mingw/include)
 
     set(GLFW_STATIC_LIBRARIES ${PROJECT_SOURCE_DIR}/libs/glfw-3.1.2.bin.WIN64/lib-mingw-w64/libglfw3.a)
     set(GLEW_LIBRARIES ${PROJECT_SOURCE_DIR}/libs/glew-2.1.0/lib/libglew32.a)
-    set(FREEGLUT_LIBRARIES ${PROJECT_SOURCE_DIR}/libs/freeglut-3.0.0-mingw/lib/libfreeglut_static.a winmm gdi32)
+    set(GLUT_LIBRARIES ${PROJECT_SOURCE_DIR}/libs/freeglut-3.0.0-mingw/lib/libfreeglut_static.a winmm gdi32)
 
 else ()
     message("UNSUPPORTED OS")
 endif ()
 
-include_directories("include" ${GLEW_INCLUDE_DIRS} ${FREEGLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS})
+include_directories(include ${GLEW_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS})
 
 set(SOURCE_FILES src/main.cpp)
-set(INCLUDE_FILES include/GLSLProgram.h src/Vertex.cpp src/Vertex.h)
+set(INCLUDE_FILES include/GLSLProgram.h include/Vertex.h)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${INCLUDE_FILES})
 
-target_link_libraries(${PROJECT_NAME} ${FREEGLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})
 
 add_custom_command(
         TARGET ${PROJECT_NAME} POST_BUILD
