fixed dll copy + mingw linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,6 @@ elseif (WIN32)
     set(GLUT_LIBRARIES ${GLUT_PATH}/lib/libfreeglut.dll winmm gdi32)
     set(GTEST_LIBRARIES ${GTEST_PATH}/lib/libgmock.dll)
 
-    add_definitions("-static")
 else ()
     message("UNSUPPORTED OS")
 endif ()
@@ -52,6 +51,8 @@ file(GLOB TEST_FILES
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${INCLUDE_FILES})
 
+SET( CMAKE_EXE_LINKER_FLAGS  ${CMAKE_EXE_LINKER_FLAGS} "-static -static-libgcc -static-libstdc++" )
+
 add_executable(${PROJECT_NAME}_TEST ${TEST_FILES} src/HalfEdge.cpp src/SimpleObjParser.cpp ${GTEST_INCLUDE_DIRS})
 
 target_link_libraries(${PROJECT_NAME} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${GTEST_LIBRARIES})
@@ -60,7 +61,6 @@ target_link_libraries(${PROJECT_NAME}_TEST ${GTEST_LIBRARIES})
 
 add_custom_command(
         TARGET ${PROJECT_NAME} POST_BUILD
-        TARGET ${PROJECT_NAME}_TEST POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         ${PROJECT_SOURCE_DIR}/shader
         ${CMAKE_CURRENT_BINARY_DIR}/shader
@@ -68,11 +68,16 @@ add_custom_command(
 if (WIN32)
     add_custom_command(
             TARGET ${PROJECT_NAME} POST_BUILD
-            TARGET ${PROJECT_NAME}_TEST POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy
-            #${GLFW_PATH}/lib-mingw-w64/glfw3.dll
             ${GLEW_PATH}/lib/glew32.dll
             ${GLUT_PATH}/lib/libfreeglut.dll
+            ${GTEST_PATH}/lib/libgmock.dll
+            ${CMAKE_CURRENT_BINARY_DIR}/
+    )
+
+    add_custom_command(
+            TARGET ${PROJECT_NAME}_TEST POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy
             ${GTEST_PATH}/lib/libgmock.dll
             ${CMAKE_CURRENT_BINARY_DIR}/
     )
